@@ -26,7 +26,7 @@
 
 namespace Rcpp{
 	
-	CharacterVector::CharacterVector(SEXP x) throw(not_compatible) : RObject() {
+	CharacterVector::CharacterVector(SEXP x) throw(not_compatible) : VectorBase() {
 		switch( TYPEOF( x ) ){
 			case STRSXP:
 				setSEXP( x ) ;
@@ -42,15 +42,15 @@ namespace Rcpp{
 		}
 	}
 	
-	CharacterVector::CharacterVector(int size) : RObject() {
+	CharacterVector::CharacterVector(int size) : VectorBase() {
 		setSEXP( Rf_allocVector(STRSXP, size) ) ;
 	}
 	
-	CharacterVector::CharacterVector( const std::string& x){
+	CharacterVector::CharacterVector( const std::string& x) : VectorBase() {
 		setSEXP( Rf_mkString(x.c_str()) ) ;
 	}
 	
-	CharacterVector::CharacterVector( const std::vector<std::string>& x){
+	CharacterVector::CharacterVector( const std::vector<std::string>& x): VectorBase() {
 		SEXP y = PROTECT( Rf_allocVector( STRSXP, x.size() ) );
 		int n = x.size() ;
 		std::vector<std::string>::const_iterator iter = x.begin() ;
@@ -62,7 +62,7 @@ namespace Rcpp{
 	}
 	
 #ifdef HAS_INIT_LISTS
-	CharacterVector::CharacterVector( std::initializer_list<std::string> list ) {
+CharacterVector::CharacterVector( std::initializer_list<std::string> list ) : VectorBase() {
 		SEXP x = PROTECT( Rf_allocVector( STRSXP, list.size() ) ) ;
 		const std::string *p = list.begin() ;
 		int n = list.size() ;
@@ -73,22 +73,6 @@ namespace Rcpp{
 		UNPROTECT( 1 ); /* x */
 	}
 #endif
-
-SEXP CharacterVector::get( const int& i ) const { 
-	return STRING_ELT(m_sexp, i) ;
-}
-
-void CharacterVector::set( const int& i, const std::string& value ){
-	SET_STRING_ELT(m_sexp,i, Rf_mkChar(value.c_str()) ) ;
-}
-
-// SEXP* CharacterVector::begin(){
-// 	return RCPP_VECTOR_PTR(m_sexp) ;
-// }
-// 
-// SEXP* CharacterVector::end(){
-// 	return RCPP_VECTOR_PTR(m_sexp) + LENGTH(m_sexp) ;
-// }
 
 /* proxy stuff */
 
