@@ -28,7 +28,7 @@
 
 namespace Rcpp{
 	
-	ExpressionVector::ExpressionVector(SEXP x) throw(not_compatible) : RObject() {
+	ExpressionVector::ExpressionVector(SEXP x) throw(not_compatible) : VectorBase() {
 		switch( TYPEOF( x ) ){
 			case EXPRSXP:
 				setSEXP( x ) ;
@@ -46,12 +46,12 @@ namespace Rcpp{
 		}
 	}
 	
-	ExpressionVector::ExpressionVector(int size) : RObject() {
+	ExpressionVector::ExpressionVector(int size) : VectorBase() {
 		setSEXP( Rf_allocVector(EXPRSXP, size) ) ;
 	}
 
 #ifdef HAS_INIT_LISTS
-	ExpressionVector::ExpressionVector( std::initializer_list<RObject> list ) {
+	ExpressionVector::ExpressionVector( std::initializer_list<RObject> list ) : VectorBase() {
 		SEXP x = PROTECT( Rf_allocVector( EXPRSXP, list.size() ) ) ;
 		const RObject* p = list.begin() ;
 		for( size_t i=0; i<list.size() ; i++, p++){
@@ -61,16 +61,6 @@ namespace Rcpp{
 		UNPROTECT( 1 ); /* x */
 	}
 #endif
-
-// SEXP* ExpressionVector::begin(){
-// 	return RCPP_VECTOR_PTR(m_sexp) ;
-// }
-// 
-// SEXP* ExpressionVector::end(){
-// 	return RCPP_VECTOR_PTR(m_sexp) + LENGTH(m_sexp) ;
-// }
-
-/* proxy stuff */
 
 ExpressionVector::Proxy::Proxy(ExpressionVector& v, int i) :
 	parent(v), index(i){}
